--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -99,6 +99,8 @@ p {
 
     img {
         width: 100%;
+        z-index: -1;
+
     }
 
     @include breakpoint(untilTablet) {
