--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -84,6 +84,7 @@
                         width: 100%;
                         height: auto;
                         object-fit: cover;
+                        border: 3px solid white;
                     }
                 }
 
